# zero2-rs

./: .env.example  .gitignore  .graphqlconfig  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  TODO.md  azure-pipelines.yml  graphql.config.json  shell.nix
.github/workflows/: build-docker.yml
assets/: greetings.txt  schema.graphql  schema.json
assets/graphql/: ActivitySearch.graphql  CharacterSearch.graphql  MediaSearch.graphql  UserSearch.graphql
assets/graphql/fragments/: CharacterBase.graphql  MediaBase.graphql  UserBase.graphql  UserStatistics.graphql
assets/graphql/queries/: ActivityQuery.graphql  ActivitySearch.graphql  AiringSchedule.graphql  CharacterQuery.graphql  MediaQuery.graphql  StaffQuery.graphql  StudioQuery.graphql  UserQuery.graphql  UserSearch.graphql
assets/graphql/queries/Search/: CharacterSearch.graphql  MediaSearch.graphql  StaffSearch.graphql  UserSearch.graphql
assets/queries/: ActivitySearch.graphql  CharacterSearch.graphql  MediaSearch.graphql  UserSearch.graphql
data/: config.json
migrations/2019-05-24-025043_commands_blacklist/: up.sql
migrations/2019-08-16-113143_create_users/: up.sql
migrations/2019-08-16-113231_create_blacklist/: up.sql
migrations/2019-10-06-215941_create_guilds/: down.sql  up.sql
migrations/2019-11-27-204744_create_custom_commands/: down.sql  up.sql
src/: checks.rs  client.rs  commands.rs  core.rs  db.rs  lib.rs  macros.rs  main.rs  menu.rs  models.rs  monitors.rs  store.rs  structs.rs  utils.rs
src/commands/: anilist.rs  config.rs  fortune.rs  fun.rs  giphy.rs  meta.rs  mod.rs  nekoslife.rs  profile.rs  system.rs  test.rs  urban.rs
src/commands/anilist/: activity.rs  airing.rs  anime.rs  builders.rs  character.rs  client.rs  manga.rs  models.rs  source.rs  staff.rs  user.rs  utils.rs
src/commands/anilist/models/: activity.rs  airing_schedule.rs  character.rs  media.rs  user.rs
src/commands/fun/: bigtext.rs  cookie.rs  fortune.rs  fortune_cookie.rs  giphy.rs  golendar.rs  mod.rs  next.rs  nlimage.rs  owo.rs  owoify.rs
src/commands/knowledge/: mod.rs  urban.rs
src/commands/meta/: avatar.rs  bot_info.rs  botinfo.rs  mod.rs  ping.rs  stats.rs  test.rs  who.rs
src/commands/nekoslife/: nlimage.rs  nlowo.rs
src/commands/system/: blacklist.rs  cleanup.rs  dm.rs  echo.rs  embed.rs  interaction.rs  log.rs  mod.rs  shutdown.rs
src/core/: cc_parser.rs  checks.rs  config.rs  consts.rs  event_handler.rs  framework.rs  handler.rs  mod.rs  store.rs  utils.rs
src/db/: models.rs  schema.rs
src/menu/: builders.rs  handlers.rs  mod.rs  reactions.rs  utils.rs
src/menu/anilist/: character.rs  media.rs  mod.rs  pagination.rs  staff.rs  user.rs
src/models/: anilist.rs  emoji.rs  giphy.rs
src/models/anilist/: activity.rs  airing_schedule.rs  character.rs  connection.rs  media.rs  query.rs  source.rs  staff.rs  studio.rs  user.rs
src/monitors/: anilist.rs  discord.rs  emojis.rs  greeting.rs  message_id.rs  mod.rs
z2-anilist/: .graphqlconfig  Cargo.toml  graphql.config.yml
z2-anilist/graphql/: schema.graphql
z2-anilist/graphql/Fragments/: CharacterBase.graphql  MediaBase.graphql  MediaFull.graphql  PageInfo.graphql  StaffBase.graphql  StudioBase.graphql  UserBase.graphql  UserMediaStatistics.graphql
z2-anilist/graphql/Queries/: ActivityFetch.graphql  AiringSchedule.graphql  AiringScheduleList.graphql  CharacterFetch.graphql  CharacterSearch.graphql  MediaFetch.graphql  MediaSearch.graphql  StaffFetch.graphql  StaffSearch.graphql  StudioFetch.graphql  StudioSearch.graphql  UserFetch.graphql  UserSearch.graphql
z2-anilist/src/: client.rs  lib.rs  macros.rs  query_variables.rs  utils.rs
z2-anilist/src/models/: activity.rs  airing_schedule.rs  character.rs  mod.rs  shared.rs  staff.rs  studio.rs  user.rs
z2-anilist/src/models/media/: enums.rs  mod.rs
z2-config/: Cargo.toml
z2-config/src/: kv_store.rs  lib.rs
z2-database/: Cargo.toml
z2-database/migrations/2020-11-18-213210_create_configs/: up.sql
z2-database/src/: config.rs  lib.rs  models.rs  schema.rs
z2-interactions/: Cargo.toml
z2-interactions/src/: anilist.rs  lib.rs  meta.rs  utils.rs
z2-menu/: Cargo.toml
z2-menu/src/: giphy.rs  lib.rs  reactions.rs  types.rs  urban.rs  utils.rs
z2-menu/src/anilist/: airing_schedule.rs  character.rs  embeds.rs  media.rs  mod.rs  pagination.rs  staff.rs  studio.rs  types.rs  user.rs
