[package]
name = "z2-staging"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

[profile.dev]
incremental = true

[profile.release]
opt-level = 'z'
lto = true

[workspace]
members = [
    "z2-anilist",
    "z2-database",
    "z2-menu"
]

[dependencies]
anilist = { path = "./z2-anilist" }
database = { path = "./z2-database" }
menu = { path = "./z2-menu" }

async-trait = "0.1"
chrono = "0.4"
env_logger = "0.7"
futures = "0.3"
kankyo = "0.3"
log = "0.4"
lazy_static = "1.4"
serenity = "0.9"
serde_json = "1.0"
sys-info = "0.7"
sysinfo = "0.15"
rand = "0.7"
regex = "1.4"

[dependencies.reqwest]
version = "0.10"
features = ["blocking"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.urbandictionary]
git = "https://github.com/youssefhabri/urbandictionary.rs"
branch = "async"