[package]
name = "zero-two"
version = "0.6.1"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

[profile.dev]
incremental = true

[profile.release]
opt-level = 'z'
lto = true

[workspace]
members = ["z2-anilist", "z2-database", "z2-interactions", "z2-menu"]

[dependencies]
anilist = { path = "./z2-anilist" }
database = { path = "./z2-database", optional = true }
interactions = { path = "./z2-interactions" }
menu = { path = "./z2-menu" }

async-trait = "0.1"
chrono = "0.4"
fern = "0.6"
futures = "0.3"
kankyo = "0.3"
log = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
sys-info = "0.7"
sysinfo = "0.19"
rand = "0.7"
regex = "1.4"
pretty_env_logger = "0.4"
uwuify = "0.2"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serenity]
version = "0.10"
features = ["unstable_discord_api"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.urbandictionary]
git = "https://github.com/youssefhabri/urbandictionary.rs"
branch = "async"

[features]
default = []
db = ["database"]
