[package]
name = "anilist"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-trait = "0.1"
casey = "0.3"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
thiserror = "1.0"
regex = "1.4"
