[package]
name = "z2-config"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"