[package]
name = "database"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0", features = ["chrono"] }
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
kankyo = "0.3"
thiserror = "1.0"
