[package]
name = "interactions"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anilist = { path = "../z2-anilist"}
menu = { path = "../z2-menu"}

kankyo = "0.3"
lazy_static = "1.4"
serde_json = "1.0"

[dependencies.serenity]
version = "0.10"
features = ["client", "model", "http", "rustls_backend", "unstable_discord_api"]
default-features = false