[package]
name = "menu"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anilist = { path = "../z2-anilist" }
async-trait = "0.1"
chrono = "0.4"
serenity = "0.9.0-rc.2"
log = "0.4"