[package]
name = "menu"
version = "0.1.0"
authors = ["Youssef Habri <youssef.habri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anilist = { path = "../z2-anilist" }
async-trait = "0.1"
chrono = "0.4"
log = "0.4"
tokio = "0.2"
thiserror = "1.0"

[dependencies.serenity]
version = "0.10"
features = ["unstable_discord_api"]

[dependencies.serde]
version = "1.0"
default-features = false

[dependencies.urbandictionary]
git = "https://github.com/youssefhabri/urbandictionary.rs"
branch = "async"